Added typedoc comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,9 @@
     },
     "include": [
         "src/**/*"
-    ]
+    ],
+    "typedocOptions": {
+        "entryPoints": ["src/index.ts"],
+        "out": "docs"
+    }
 }
