--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "test": "jest",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "docs": "npx typedoc"
   },
   "author": "Adam Diehl",
   "license": "MIT",
@@ -17,6 +18,7 @@
     "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "typedoc": "^0.25.1",
     "typescript": "^5.2.2"
   }
 }
