--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "npx tsc",
     "docs": "npx typedoc"
   },
