--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "eslint": "^8.50.0",
+    "eslint-config-standard-with-typescript": "^39.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typedoc": "^0.25.1",
